grammar.js
    source_file: ($) => 
      optional(
        seq(
          optional($._nl), 
          repeat(seq($._element, $._nl)), 
          optional(choice($._element, $._nl, $._ws))
        )
      ),

    _element: ($) =>
      choice(
        $._statement,
        $.control,
        $._standalone_label,
        $._standalone_comment,
      ),

    instruction: ($) =>
      seq(
        field("mnemonic", $._instruction_mnemonic),
        optional(field("operands", $.operand_list))
      ),

    _instruction_mnemonic: ($) => 
      alias(mnemonicChoice(instructions), $.instruction_mnemonic),

    operand_list: ($) => seq($._ws, commaSep($._operand, $._sep)),

    _operand: ($) => 
      choice($._address, $._register, seq(optional("#"), $._expression)),

    //----------------------------------------------------------------------
    // Directives:
    //----------------------------------------------------------------------

    directive_message: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".fail", ".message", ".warning"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep($._expression, $._sep))
      ),

    directive_equ: ($) =>
      seq(
        field("left", $._identifier),
        $._ws,
        field("mnemonic", alias(mnemonicChoice([".equ"]), $.directive_mnemonic)),
        $._ws,
        field("right", $._expression)
      ),

    directive_set: ($) =>
      choice(
        seq(
          field("left", $._identifier),
          $._ws,
          field("mnemonic", alias(mnemonicChoice([".set"]), $.directive_mnemonic)),
          $._ws,
          field("right", $._expression)
        ),
        seq(
          field("mnemonic", alias(mnemonicChoice([".set"]), $.directive_mnemonic)),
          $._ws,
          field("left", $._identifier),
          $._ws,
          field("right", $._expression)
        ),
      ),

    directive_data_definition: ($) =>
      seq(
        field(
          "mnemonic", 
          alias(
            mnemonicChoice(
              [".accum", ".align", ".ascii", ".asciiz", ".byte", ".double", ".float", ".fract", ".half", ".sfract", ".space", ".word"]
            ), 
            $.directive_mnemonic)
          ),
        $._ws,
        field("operands", commaSep(optional($._expression), $._sep))
      ),

    macro_call: ($) => 
      prec.right(
        seq(
          field("macro", $._identifier),
          optional(field("operands", $.operand_list))
        )
      ),

    // Address:

    base_offset: ($) => 
      seq(
        /\[[ \t]*/,
        choice(
          $.address_register, 
          alias($.interpolated, $.register_macro_argument)
        ),
        /[ \t]*\][ \t]*/, 
        optional(field("offset", $._expression))
      ),

    pre_increment: ($) => 
      seq(
        /\[[ \t]*\+[ \t]*/,
        choice(
          $.address_register, 
          alias($.interpolated, $.register_macro_argument)
        ),
        /[ \t]*\][ \t]*/, 
        optional(field("offset", $._expression))
      ),

    post_increment: ($) => 
      seq(
        /\[[ \t]*/,
        choice(
          $.address_register, 
          alias($.interpolated, $.register_macro_argument)
        ),
        /[ \t]*\+[ \t]*\][ \t]*/,
        optional(field("offset", $._expression))
      ),

    circular: ($) => 
      seq(
        /\[[ \t]*/,
        choice(
          $.extended_address_register, 
          alias($.interpolated, $.register_macro_argument)
        ),
        /[ \t]*\+[ \t]*c[ \t]*\][ \t]*/,
        optional(field("offset", $._expression))
      ),

    bit_reverse: ($) => 
      seq(
        /\[[ \t]*/,
        choice(
          $.extended_address_register, 
          alias($.interpolated, $.register_macro_argument)
        ),
        /[ \t]*\+[ \t]*r[ \t]*\]/,
      ),

    // Register:

    data_register: () => 
      /[dD](?:[0-9]|1[0-5])([lLuU]{1,2})?/,
    address_register: () => /[aA](?:[0-9]|1[0-5])|sp/,
    extended_address_register: () => /[aA](?:[02468]|1[024])\s*\/\s*[aA](?:[13579]|1[135])/,

    // Expressions:

    _expression: ($) => 
      choice(
        $._numeric_literal,
        $._string,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $._identifier,
        $.function_call,
        alias($._local_label_ref, $.symbol)
      ),
    
    binary: () => /0[bB][01]+/,
    hexadecimal: () => /0[xX][0-9a-fA-F]+/,
    decimal_integer: () => /\d+/,
    decimal_float: () => token(/\d+((\.\d+([eE][+-]?\d+)?)|[eE][+-]?\d+)|\.\d+/),

    _string: ($) =>
      prec(
        2,
        choice(
          $.string_literal,
          $.string_concate,
          $.substring
        ),
      ),

    string_literal: ($) =>
      choice(
        // Single quoted
        seq(
          "'",
          repeat(
            choice(
              prec(1, /[^'\n\\]+/), // Normal chars
              "''", // Repeat quote escape
              $._string_escape_codes
            )
          ),
          "'"
        ),
        // Double quoted
        seq(
          '"',
          repeat(choice(prec(1, /[^"\n\\]+/), '""', $._string_escape_codes)),
          '"'
        ),
        $.string_concate,
        $.substring
      ),

    string_concate: ($) => 
      prec.left(
        seq(
          $._string,
          /[ \t]*\+\+[ \t]*/,
          $._string,
        ),
      ),

    substring: ($) => 
      seq(
        /\[[ \t]*/,
        $._string,
        /[ \t]*,[ \t]*/,
        alias($.decimal_integer, $.start_pos),
        /[ \t]*,[ \t]*/,
        alias($.decimal_integer, $.length),
        /[ \t]*\]/,
      ),

    _string_escape_codes: ($) =>
      choice(
        /\\[\\bfnrt"'e]/, // Single char escape codes
        /\\[0-7]+/, // Octal character code
        /\\[xX][0-9a-f]+/, // Hex charcter code
      ),

    unary_expression: ($) => 
    prec(
      PREC.unary,
      seq(
        field("operator", alias(choice("+", "-", "!", "~"), $.operator)),
        field("operand", $._expression)
      )
    ),

    binary_expression: ($) =>
      choice(
        ...binaryOperators.map((operator, i) => 
          prec.left(
            i,
            seq(
              field("left", $._expression),
              field("operator", seq(optional($._ws), alias(operator, $.operator), optional($._ws))),
              field("right", $._expression)
            )
          ))
      ),

    parenthesized_expression: ($) =>
      choice(
        seq(/\([ \t]*/, $._expression, /\)[ \t]*/)
      ),

    // Identifiers

    _identifier: ($) =>
      choice($.symbol, $.interpolated),

    // symbol: () => {
    //   const symbolChars = /[a-zA-Z0-9._]/;
    //   const symbolStartChars = /[a-zA-Z._]/;
    //   return token(prec.right(seq(symbolStartChars, repeat(symbolChars))));
    // },

    symbol: ($) => 
      prec.right(
        $._symbol_chars
      ),

    _symbol_chars: () => /[a-zA-Z0-9._]+/,

    macro_arg: () => 
      token(
        choice(
          /[\\?%^][a-zA-Z._][a-zA-Z0-9._]*/,
          /\\[?%^][a-zA-Z._][a-zA-Z0-9._]*/,
        )
      ),

    interpolated: ($) => 
      prec.right(
        1,
        seq(
          choice(
            seq($.macro_arg, $._symbol_chars),
            seq($._symbol_chars, $.macro_arg),
            $.macro_arg
          ),
          repeat(choice($.macro_arg, $._symbol_chars)),
        ),
      ),

    function_call: ($) => 
      seq(
        "@",
        alias(mnemonicChoice(builtIn_functions), $.builtIn_function),
        /\([ \t]*/,
        optional($.expression_list),
        /[ \t]*\)/
      ),

    expression_list: ($) => commaSep($._expression, $._sep),

    //----------------------------------------------------------------------
    // Misc:
    //----------------------------------------------------------------------

    _sep: () => /[ \t]*,[ \t]*/,
    _ws: () => /[ \t]+/,
    _nl: () => /([ \t]*(\r\n|\n|\r))+/,
  }
});

function commaSep(rule, sep) {
  return seq(rule, repeat(seq(sep, rule)));
}

function toCaseInsensitive(a) {
  let ca = a.charCodeAt(0);
  if (ca >= 97 && ca <= 122) return `[${a}${a.toUpperCase()}]`;
  if (ca >= 65 && ca <= 90) return `[${a.toLowerCase()}${a}]`;
  return `[${a}]`;
}

function caseInsensitive(keyword) {
  return new RegExp(keyword.split("").map(toCaseInsensitive).join(""));
}

function mnemonicChoice(options) {
  return choice(...options.map(caseInsensitive));
}
